# lin-tree-solver

./: +config.ts  .eslintcache  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .lfsconfig  .prettierignore  .prettierrc.json  .yarnrc.yml  Dockerfile  README.md  _routes.json  config-overrides.js  eslint.config.mjs  index.html  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  schema.sql  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vite.d.ts  wrangler.toml
.github/workflows/: build.yml  docker.yml
api/: fetcher.ts  useWorkspace.ts
functions/: index.ts  tsconfig.json
functions/[workspace]/: builder.ts
images/: tree.avif  tree.jxl
images/new-tree-root/: edit_syntax_rule.avif  edit_syntax_rule.jxl  edit_syntax_rules.avif  edit_syntax_rules.jxl  final_tree.avif  final_tree.jxl  new_syntax_rule.avif  new_syntax_rule.jxl
pages/: +Head.tsx  +Layout.tsx  +config.ts  style.css
pages/_error/: +Page.tsx
pages/index/: +Page.tsx
pages/support/: +Page.tsx  +config.ts
public/: 404.html  index.html  sitemap.xml
renderer/: +onRenderHtml.tsx
repo/: database.ts  db.sql  workspace.ts
repo/data/: ruleset.ts  sentence.ts
repo/proto/: bundle.d.ts  bundle.js  ruleset.proto  sentence.proto
server/: index.ts  tsconfig.json  vite.d.ts
server/handlers/: api.ts  workspace.ts
src/: App.tsx  env.d.ts  index.tsx  reportWebVitals.ts  types.ts  withTracker.tsx
src/wasm-tree-solver/: Cargo.toml
src/wasm-tree-solver/src/: hasher.rs  lib.rs  rule_set.rs  solver.rs  tree.rs
(+61 files in other folders)
