[package]
name = "lin-tree-builder"
version = "0.1.0"
authors = ["Adam Comer"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
web-sys = {version = "0.3.46", features = ["console"]}
js-sys = "0.3.46"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]
# wasm-opt = false

[profile.release]
debug = true
